# bank-api

./: README.md  banks.json  bing_results.html  index.d.ts  index.js  index.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json
app/: LayoutShell.tsx  global.css  layout.js  layout.tsx  page.js  page.tsx
app/api/v1/banks/: route.js  route.ts
app/api/v1/nig/banks/: route.js  route.ts
app/api/v1/nig/banks/[slug]/: route.js  route.ts
app/api/v1/nig/banks/[slug]/logo/: route.js  route.ts
app/directory/: page.tsx
app/explorer/: page.tsx
app/keys/: page.tsx
app/settings/: page.tsx
app/status/: page.tsx
nigeria/: __init__.py  banks.py  data.py
nigerian_banks.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_banks.js  test_banks.py
ui-stitch/: DESIGN.md  code.html
