[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nigerian-banks"
version = "0.1.0"
description = "A comprehensive Python package to get Nigerian bank names, slugs, codes, USSDs, and logos."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Cybergenii"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nigeria*"]

[tool.setuptools.package-data]
"nigeria" = ["logos/*.png", "logos/*.svg"]
